minor layout bugfix, add classifications and enable partOf

--- a/src/main/resources/META-INF/resources/scss/project_styles/_header.scss
+++ b/src/main/resources/META-INF/resources/scss/project_styles/_header.scss
@@ -15,7 +15,7 @@
       left: 0;
       height: 90px;
       width: 90px;
-      background-image: url('../../..//images/himmelavatar100.jpg');
+      background-image: url('../../../images/avatar100.png');
       background-size: 105%;
       border: 3px solid #eaeaea;
       border-radius: 100%;
