--- a/src/main/resources/META-INF/resources/scss/project_styles/_layout.scss
+++ b/src/main/resources/META-INF/resources/scss/project_styles/_layout.scss
@@ -45,38 +45,6 @@
     }
   }
 
-  // element to break container width ==========================================
-  .break-free-to-full-width {
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    padding: 3rem 0;
-    &--building {
-      background-image: url('../../../images/Keksdose_neu.jpg');
-      background-color: #517ab8;
-      background-attachment: fixed;
-      background-position: 50%;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    &--snowflake {
-      background-color: rgba(255, 255, 255, 0.5);
-      .card {
-        border: 1px solid rgba(0, 76, 147, 0.8);
-      }
-      border: 1px solid $primary;
-    }
-    &:first-child {
-        margin-top: -2rem;
-    }
-    &:last-child {
-      margin-bottom: -8rem;
-  }
-  }
-
   // fix layout problems of the break free element =============================
   .after-breaking-free {
     padding-top: 2rem;
